[package]
name = "test-stream"
version = "0.1.0"
authors = ["Steve Meyer <steve.meyer@swift-nav.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dencode = { version = "0.1.0", features = ["async"] }
futures = "0.3.13"
pin-project = "1.0.5"
sbp = { git = "https://github.com/swift-nav/libsbp", features = ["async"] }
tokio = { version = "1.3.0", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["full"] }
